--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
   <script src="./script.js"></script>
   <h1>hello module</h1>
+  <form method="POST">
+   name <input type="text"name="name">
+  </form>
 </body>
 
 </html>
